@@ -54,7 +54,8 @@
     }
 </style>
 <h3>The QA40xPlot application consists of 9 different audio tests that use a QA402 or QA403 audio analyzer from <a href="http://quantasylum.com">QuantAsylum</a>.<br /><br /></h3>
-<p> External Audio&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="File:../Help/ExternalAudio.html">How to use external signal generators and what to expect.</a></p>
+<p> What&#39;s New&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="File:../Help/WhatsNew.html">See the latest version changes</a></p>
+<p> External Audio&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="File:../Help/ExternalAudio.html">How to use external signal generators and what to expect.</a></p>
 <p> The Mathematics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="File:../Help/AudioMath.pdf">Click here for (early) math summary.</a></p>
 <p> The Video Tutorial&nbsp;&nbsp;&nbsp; <a href="https://youtu.be/veuTcE5_wk8">Click here for the Tutorial</a></p>
 <p> The Changelog&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="File:../Help/ChangeLog.txt">Click here for the Changelog</a></p>
