@@ -28,7 +28,7 @@ namespace QA40xPlot.ViewModels
 		private ThdChannelInfo actInfoLeft { get; set; }
 		private ThdChannelInfo actInfoRight { get; set; }
 		[JsonIgnore]
-		public override RelayCommand DoStart { get => new RelayCommand(StartIt); }
+		public override RelayCommand DoRun { get => new RelayCommand(StartIt); }
 		[JsonIgnore]
 		public override RelayCommand DoStop { get => new RelayCommand(StopIt); }
 		[JsonIgnore]
