@@ -16,7 +16,7 @@
         </Grid.ColumnDefinitions>
         <ScrollViewer Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <StackPanel Margin="0,1,1,0">
-                <views:StartStop ShowRun="True" />
+                <views:StartStop ShowStart="True" />
                 <views:Attenuator AttnAtStart="False"  />
                 <views:GroupHeader Header="Testing" />
                 <Grid>
